@@ -1,6 +1,8 @@
 javac -d . src/*.java
 java App
 jar cvfm puzzle.jar manifest.mf App.class com/ images/
+jlink --add-modules java.base,java.desktop --output ./jre-mini --compress=zip-9 --strip-debug --no-header-files --no-man-pages
+
 
 new ImageIcon("./images/background.png")去工作目录下的images文件夹查找
 new ImageIcon("images/background.png")同上，隐式写法
